# TrinityChain

./: Cargo.toml  trinity-node.out
.temp_patch_backup/: persistence_test_before.rs
dashboard/: index.html  package-lock.json  tailwind.config.js
dashboard/src/: DiagnosticTerminal.jsx  NetworkManager.jsx  TrinityChainDashboard.jsx  api-client.js  index.css
dashboard/src/components/: Analytics.jsx  BlockExplorer.jsx  Header.jsx  Network.jsx  StatCard.jsx
documentation/: TECHNICAL_MAP.md
src/: addressbook.rs  api.rs  blockchain.rs  cache.rs  config.rs  consensus.rs  crypto.rs  economics.rs  error.rs  fractal_state.rs  geometry.rs  lib.rs  node.rs  persistence.rs  sync.rs  transaction.rs  transitions.rs  triangle.rs
src/blockchain/: core.rs
src/blockchain/core/: chain.rs  state.rs  validation.rs
src/transaction/: types.rs  validation.rs
tests/: api_endpoints.rs  wallet_and_transactions.rs
